<resources>
    <string name="app_name">Guess-A-Word</string>
    <string name="start_header_text">Start a new game</string>
    <string name="start_word_enter">Enter word</string>
    <string name="start_entry_description">Words have to be min 3 characters in length and max 6. No special signs are allowed. Case does not matter.</string>
    <string name="start_or">Or play against the computer</string>
    <string name="start_random_game">Start a random game</string>
</resources>